--- a/KalanSageFront/k-admin/src/styles.scss
+++ b/KalanSageFront/k-admin/src/styles.scss
@@ -18,7 +18,7 @@ html, body {
 }
 body { 
     margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    font-family: poppins, "Helvetica Neue", sans-serif; 
 }
 
 :root{
