--- a/KalanSageFront/k-admin/src/app/pages/1-dashboard/dashboard.component.html
+++ b/KalanSageFront/k-admin/src/app/pages/1-dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
       <!--  -->
       <ng-container matColumnDef="inscris">
         <th mat-header-cell *matHeaderCellDef>Inscris</th>
-        <td mat-cell *matCellDef="let module">{{ module.inscris }}</td>
+        <td mat-cell *matCellDef="let module">{{ module.modulesUsers }}</td>
       </ng-container>
 
       <!--  -->
