Last commit at ODK

--- a/KalanSageFront/k-admin/src/app/module-create-dialog/module-create-dialog.component.html
+++ b/KalanSageFront/k-admin/src/app/module-create-dialog/module-create-dialog.component.html
@@ -23,8 +23,8 @@
         </div>
         <!-- Preview of the uploaded image -->
         <img
-          *ngIf="imagePreviewUrl"
-          [src]="imagePreviewUrl"
+          *ngIf="imageUrl"
+          [src]="imageUrl"
           class="custom-image"
           alt="Aperçu de l'image"
         />
