--- a/KalanSageFront/k-admin/src/app/components/lecon-add/lecon-add.component.scss
+++ b/KalanSageFront/k-admin/src/app/components/lecon-add/lecon-add.component.scss
@@ -24,7 +24,6 @@
 .form-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
 }
 
 .image-upload {
@@ -102,8 +101,8 @@
 .dialog-actions {
   display: flex;
   justify-content: center;
-  gap: 16px;
-  margin-top: 16px;
+  gap: 14px;
+  margin-top: 0px;
   width: 100%;
 }
 .mat-mdc-dialog-surface mdc-dialog__surface {
@@ -111,7 +110,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 18px;
 }
 
 .actions{
@@ -123,4 +122,7 @@
 .custom-image {
   width: 100px;
   border-radius: 8px;
+}
+.module-id-display{
+  display: none;
 }
