--- a/KalanSageFront/k-admin/src/app/pages/3-Module/module.component.scss
+++ b/KalanSageFront/k-admin/src/app/pages/3-Module/module.component.scss
@@ -91,7 +91,7 @@
 
   mat-paginator {
     margin-top: 20px;
-    background-color: none;
+    background-color: transparent;
     color: var(--primary-color);
     border-radius: 8px;
 
